--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.17.0",
     "react-switch": "^7.0.0",
     "reactstrap": "^9.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
